# LeTourDataSet

./: .gitignore  .nojekyll  CNAME  LICENSE.md  Makefile  README.md  README.txt  Riders.csv  _quarto.yml  allriders.csv  allriders_v2.csv  allriders_v3.csv  analysis.ipynb  domainendings.txt  fix_2025_riders_history.py  index.html  index.qmd  main.R  main.ipynb  pyproject.toml  search.json  summary.csv
.archive/: Downloader.py  TDF_Riders_History.csv  TDF_Stages_History.csv
.github/: INFOS.md  README.md
analysis/: playground.ipynb
data/: JerseyWearers.csv  Rankings.csv  StageWinners.csv  Stages.csv  Starters.csv  TDFF_Riders_History.csv  TDF_Riders_History.csv  TDF_Stages_History.csv  TourInfo.csv  riders.csv
docs/: readme.md
legacy/: allriders.csv  allriders_v2.csv
letourdataset/: .gitignore  Downloader.py  Downloader_POC.ipynb  Downloaderv2.ipynb  Plotter.py  TourData.py  TourDataFactory.py  TourDataFrame.py  URLCollector.py  main.py
notebooks/: main.ipynb  pipinstall.ipynb
postprocess/: datefix.m  domainendings.txt  postprocess.py
raw/: .id_104.txt.swp  id_10.txt  id_102.txt  id_103.txt  id_104.txt  id_12.txt  id_15.txt  id_19.txt  id_2.txt  id_20.txt  id_21.txt  id_22.txt  id_24.txt  id_25.txt  id_26.txt  id_27.txt  id_29.txt  id_30.txt  id_31.txt  id_33.txt  id_34.txt  id_36.txt  id_37.txt  id_38.txt  id_4.txt  id_41.txt  id_44.txt  id_46.txt  id_47.txt  id_49.txt  id_55.txt  id_56.txt  id_57.txt  id_59.txt  id_6.txt  id_60.txt  id_61.txt  id_62.txt  id_63.txt  id_65.txt  (+14 more)
scripts/: download_data.py  fix_riders_history.py  generate_plots.py  (+3 more)
(+73 files in other folders)
