[tool.poetry]
name = "LeTourDataSet"
version = "0.1.0"
description = ""
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
html2text = "^2020.1.16"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
html5lib = "^1.1"
pandas-read-xml = "^0.3.1"
numpy = "^1.23.1"
pandas = "^1.4.3"
ipykernel = "^6.15.1"
jupyter = "^1.0.0"
matplotlib = "^3.6.1"
rich = "^12.6.0"
requests-html = "^0.10.0"
aiohttp = "^3.10.5"
asyncio = "^1.6.0"  

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"