[tool.poetry]
name = "letourdataset"
version = "0.1.0"
description = "Tour de France historical data scraper and analyzer"
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]
packages = [{include = "letourdataset", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pandas = "^2.3.1"
matplotlib = "^3.6.1"
requests-html = "^0.10.0"
websockets = "~8.1"
aiohttp = "^3.10.5"
rich = "^12.6.0"
lxml-html-clean = "^0.4.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"